--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,9 @@ spring:
 server:
   port: 8080
   forward-headers-strategy: framework
+departments:
+  collection:
+    name: departments
+employee:
+  collection:
+    name: employees
