--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,15 @@ spring:
 server:
   port: 8080
   forward-headers-strategy: framework
-departments:
-  collection:
-    name: departments
-employee:
-  collection:
-    name: employees
+firebase:
+  storage:
+    bucketName: "ctu-nss.appspot.com"
+  firestore:
+    collections:
+      employee: employees
+      department: departments
+  service:
+    account:
+      file: "keys/firebase-service-account-key.json"
+kafka:
+  bootstrap-servers: kafka-service.kafka.svc.cluster.local:9092
